--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "author": "Chris Biscardi <chris@christopherbiscardi.com>",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@mdx-js/mdx": "^0.16.6",
-    "@mdx-js/tag": "^0.16.6",
+    "@material-ui/icons": "^3.0.2",
+    "@material/react-typography": "~0.8.0",
+    "@mdx-js/mdx": "^0.20.1",
+    "@mdx-js/tag": "^0.18.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.22",
     "gatsby-mdx": "^0.3.2",
@@ -31,13 +34,34 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-swipeable-views": "^0.13.1",
     "react-typography": "^0.16.13",
     "rehype-react": "^3.1.0",
+    "remark-react": "^5.0.1",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
+    "typography-theme-wordpress-2016": "^0.15.10",
+    "gatsby-plugin-accessibilityjs": "^1.0.3",
+    "gatsby-plugin-catch-links": "^2.0.11",
+    "gatsby-plugin-material-ui": "^1.2.4",
+    "gatsby-plugin-nprogress": "^2.0.8",
+    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sass": "^2.0.10",
+    "gatsby-plugin-sitemap": "^2.0.6",
+    "gatsby-plugin-styled-components": "^3.0.5",
+    "gatsby-remark-component": "^1.1.3",
+    "gray-percentage": "^2.0.0",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "react-ink": "^6.4.0",
+    "react-sidebar": "^3.0.2",
+    "sharp": "^0.21.3",
+    "slash": "^2.0.0",
+    "typography-breakpoint-constants": "^0.16.18",
+    "typography-theme-fairy-gates": "^0.16.18",
+    "typography-theme-sutro": "^0.16.18"
   },
   "keywords": [
     "gatsby"
@@ -51,7 +75,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "prettier": "^1.15.2",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-require-path-exists": "^1.1.9",
+    "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-eslint": "^2.0.4",
+    "standard": "^12.0.1"
   },
   "repository": {
     "type": "git",
