--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material/react-typography": "~0.8.0",
     "@mdx-js/mdx": "^0.20.1",
     "@mdx-js/tag": "^0.18.0",
+    "@mdx-js/loader": "^0.20.1",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.22",
@@ -88,7 +89,8 @@
     "eslint-plugin-require-path-exists": "^1.1.9",
     "eslint-plugin-standard": "^4.0.0",
     "gatsby-plugin-eslint": "^2.0.4",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "prismjs": "^1.15.0"
   },
   "repository": {
     "type": "git",
