--- a/package.json
+++ b/package.json
@@ -7,20 +7,30 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@material/react-typography": "~0.8.0",
-    "@mdx-js/mdx": "^0.20.1",
-    "@mdx-js/tag": "^0.18.0",
     "@mdx-js/loader": "^0.20.1",
+    "@mdx-js/mdx": "^0.20.1",
+    "@mdx-js/runtime": "^0.20.1",
+    "@mdx-js/tag": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.22",
     "gatsby-mdx": "^0.3.2",
+    "gatsby-plugin-accessibilityjs": "^1.0.3",
+    "gatsby-plugin-catch-links": "^2.0.11",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-material-ui": "^1.2.4",
+    "gatsby-plugin-nprogress": "^2.0.8",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-sitemap": "^2.0.6",
+    "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-prismjs": "^3.0.0",
@@ -31,38 +41,29 @@
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
     "gatsby-transformer-yaml": "^2.1.8",
+    "gray-percentage": "^2.0.0",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-ink": "^6.4.0",
+    "react-sidebar": "^3.0.2",
     "react-swipeable-views": "^0.13.1",
     "react-typography": "^0.16.13",
     "rehype-react": "^3.1.0",
     "remark-react": "^5.0.1",
+    "sharp": "^0.21.3",
+    "slash": "^2.0.0",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10",
-    "gatsby-plugin-accessibilityjs": "^1.0.3",
-    "gatsby-plugin-catch-links": "^2.0.11",
-    "gatsby-plugin-material-ui": "^1.2.4",
-    "gatsby-plugin-nprogress": "^2.0.8",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sitemap": "^2.0.6",
-    "gatsby-plugin-styled-components": "^3.0.5",
-    "gatsby-remark-component": "^1.1.3",
-    "gray-percentage": "^2.0.0",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
-    "react-ink": "^6.4.0",
-    "react-sidebar": "^3.0.2",
-    "sharp": "^0.21.3",
-    "slash": "^2.0.0",
     "typography-breakpoint-constants": "^0.16.18",
     "typography-theme-fairy-gates": "^0.16.18",
-    "typography-theme-sutro": "^0.16.18"
+    "typography-theme-sutro": "^0.16.18",
+    "typography-theme-wordpress-2016": "^0.15.10"
   },
   "keywords": [
     "gatsby"
@@ -76,7 +77,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.2",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -89,8 +89,9 @@
     "eslint-plugin-require-path-exists": "^1.1.9",
     "eslint-plugin-standard": "^4.0.0",
     "gatsby-plugin-eslint": "^2.0.4",
-    "standard": "^12.0.1",
-    "prismjs": "^1.15.0"
+    "prettier": "^1.15.2",
+    "prismjs": "^1.15.0",
+    "standard": "^12.0.1"
   },
   "repository": {
     "type": "git",
