--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-catch-links": "^2.0.11",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
+    "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-material-ui": "^1.2.4",
     "gatsby-plugin-nprogress": "^2.0.8",
