--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "gatsby-transformer-yaml": "^2.1.8",
     "gray-percentage": "^2.0.0",
     "lodash": "^4.17.11",
+    "mdx-utils": "^0.0.2",
     "node-sass": "^4.11.0",
+    "prism-react-renderer": "^0.1.6",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -52,6 +54,7 @@
     "react-ink": "^6.4.0",
     "react-sidebar": "^3.0.2",
     "react-swipeable-views": "^0.13.1",
+    "react-syntax-highlighter": "^10.1.3",
     "react-typography": "^0.16.13",
     "rehype-react": "^3.1.0",
     "remark-react": "^5.0.1",
