--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-ink": "^6.4.0",
+    "react-scroll-to-component": "^1.0.2",
     "react-sidebar": "^3.0.2",
     "react-swipeable-views": "^0.13.1",
     "react-syntax-highlighter": "^10.1.3",
