--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
     "gatsby-plugin-eslint": "^2.0.4",
     "prettier": "^1.15.2",
     "prismjs": "^1.15.0",
-    "standard": "^12.0.1"
+    "raf": "^3.4.1",
+    "standard": "^12.0.1",
+    "tween": "^0.9.0"
   },
   "repository": {
     "type": "git",
