github button and Intro update

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-github-btn": "^1.0.0",
     "react-helmet": "^5.2.0",
     "react-ink": "^6.4.0",
     "react-scroll-to-component": "^1.0.2",
