--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "remark-react": "^5.0.1",
     "sharp": "^0.21.3",
     "slash": "^2.0.0",
+    "ssr-window": "^1.0.1",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
