--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/runtime": "^0.20.1",
     "@mdx-js/tag": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "create-react-context": "^0.2.3",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.22",
     "gatsby-mdx": "^0.3.2",
@@ -22,8 +23,10 @@
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-material-ui": "^1.2.4",
+    "gatsby-plugin-netlify-cms": "^3.0.14",
     "gatsby-plugin-nprogress": "^2.0.8",
     "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sass": "^2.0.10",
@@ -46,6 +49,7 @@
     "gray-percentage": "^2.0.0",
     "lodash": "^4.17.11",
     "mdx-utils": "^0.0.2",
+    "netlify-cms": "^2.6.1",
     "node-sass": "^4.11.0",
     "prism-react-renderer": "^0.1.6",
     "prismjs": "^1.15.0",
