--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,3 +41,22 @@ collections: # A list of collections the CMS should be able to edit
         - {label: "staticman.branch", name: "staticman.branch", widget: "string", default: 'master', required: false}
       meta: # Meta data fields. Just like fields, but without any preview element
         - {label: "date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+    - name: "java" # Used in routes, ie.: /admin/collections/:slug/edit
+      label: "java" # Used in the UI, ie.: "New Post"
+      folder: "content/tutorials/java" # The path to the folder where the documents are stored
+      sort: "date:desc" # Default is title:asc
+      create: true # Allow users to create new documents in this collection
+      extension: mdx
+      format: frontmatter
+      slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+      fields: # The fields each document in this collection have
+        - {label: "layout", name: "layout", widget: "hidden", default: "single"}
+        - {label: "title", name: "title", widget: "string", tagname: "h1"}
+        - {label: "body", name: "body", widget: "markdown"}
+        - {label: "categories", name: "categories", widget: "string", required: false}
+        - {label: "comments", name: "comments", widget: "string", default: true, required: false}
+        - {label: "classes", name: "classes", widget: "string", default: "wide"}
+        - {label: "repository", name: "repository", widget: "string", default: 'pradeepvemulakonda', required: false}
+        - {label: "staticman.branch", name: "staticman.branch", widget: "string", default: 'master', required: false}
+      meta: # Meta data fields. Just like fields, but without any preview element
+        - {label: "date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
