--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "react-dom": "^16.5.1",
     "react-github-btn": "^1.0.0",
     "react-helmet": "^5.2.0",
+    "react-iframe": "^1.5.0",
     "react-ink": "^6.4.0",
+    "react-responsive-embed": "^2.1.0",
     "react-scroll-to-component": "^1.0.2",
     "react-sidebar": "^3.0.2",
     "react-swipeable-views": "^0.13.1",
