--- a/package.json
+++ b/package.json
@@ -37,15 +37,17 @@
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-custom-blocks": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
+    "gatsby-remark-katex": "^3.0.4",
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.5",
     "gatsby-remark-source-name": "^1.0.0",
     "gatsby-source-filesystem": "^2.0.2",
-    "gatsby-transformer-remark": "^2.1.6",
+    "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.3",
     "gatsby-transformer-yaml": "^2.1.8",
     "gray-percentage": "^2.0.0",
+    "katex": "^0.10.1",
     "lodash": "^4.17.11",
     "mdx-utils": "^0.0.2",
     "netlify-cms": "^2.6.1",
