--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-custom-blocks": "^2.0.5",
+    "gatsby-remark-grid-tables": "^0.0.3",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-remark-katex": "^3.0.4",
     "gatsby-remark-prismjs": "^3.0.0",
@@ -67,6 +68,7 @@
     "react-syntax-highlighter": "^10.1.3",
     "react-typography": "^0.16.13",
     "rehype-react": "^3.1.0",
+    "remark-grid-tables": "^1.6.0",
     "remark-react": "^5.0.1",
     "sharp": "^0.21.3",
     "slash": "^2.0.0",
