--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
+    "typeface-roboto": "^0.0.54",
     "typography": "^0.16.17",
     "typography-breakpoint-constants": "^0.16.18",
     "typography-theme-fairy-gates": "^0.16.18",
