--- a/src/data/tutorial-drawer.yaml
+++ b/src/data/tutorial-drawer.yaml
@@ -38,5 +38,7 @@
       link: /tutorials/java/03_fermi/
     - title: Solids
       link: /tutorials/java/04_solids/
+    - title: Band Gap
+      link: /tutorials/java/05_bandgap/
     - title: Introduction to Java
       link: /tutorials/java/00_java_introduction/
