--- a/content/data/tutorial-drawer.yaml
+++ b/content/data/tutorial-drawer.yaml
@@ -40,5 +40,7 @@
       link: /tutorials/java/04_solids/
     - title: Band Gap
       link: /tutorials/java/05_bandgap/
+    - title: Waves
+      link: /tutorials/java/06_waves/
     - title: Introduction to Java
       link: /tutorials/java/00_java_introduction/
