--- a/content/data/tutorial-drawer.yaml
+++ b/content/data/tutorial-drawer.yaml
@@ -42,5 +42,7 @@
       link: /tutorials/java/05_bandgap/
     - title: Solids
       link: /tutorials/java/04_solids/
+    - title: PN Junction
+      link: /tutorials/java/07_pnjunction/
     - title: Introduction to Java
       link: /tutorials/java/00_java_introduction/
