--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-mdx-basic",
-  "description": "Gatsby starter MDX basic",
+  "name": "pradeep-blog",
+  "description": "Pradeep Gtasby blog starter",
   "version": "1.0.0",
-  "author": "Chris Biscardi <chris@christopherbiscardi.com>",
+  "author": "pradeepvemulakonda@gmail.com",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
@@ -12,7 +12,7 @@
     "@mdx-js/tag": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "create-react-context": "^0.2.3",
-    "gatsby": "^2.0.76",
+    "gatsby": "^2.18.17",
     "gatsby-image": "^2.0.22",
     "gatsby-mdx": "^0.3.2",
     "gatsby-plugin-accessibilityjs": "^1.0.3",
@@ -29,7 +29,7 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typography": "^2.2.0",
@@ -45,7 +45,7 @@
     "gatsby-remark-source-name": "^1.0.0",
     "gatsby-source-filesystem": "^2.0.2",
     "gatsby-transformer-remark": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.1.3",
+    "gatsby-transformer-sharp": "^2.3.9",
     "gatsby-transformer-yaml": "^2.1.8",
     "gray-percentage": "^2.0.0",
     "katex": "^0.10.1",
@@ -53,6 +53,8 @@
     "mdx-utils": "^0.0.2",
     "netlify-cms": "^2.6.1",
     "node-sass": "^4.11.0",
+    "npm": "^6.13.4",
+    "nvm": "0.0.4",
     "prism-react-renderer": "^0.1.6",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
@@ -70,7 +72,7 @@
     "rehype-react": "^3.1.0",
     "remark-grid-tables": "^1.6.0",
     "remark-react": "^5.0.1",
-    "sharp": "^0.21.3",
+    "sharp": "^0.23.4",
     "slash": "^2.0.0",
     "ssr-window": "^1.0.1",
     "styled-components": "^4.1.3",
@@ -107,15 +109,12 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-require-path-exists": "^1.1.9",
     "eslint-plugin-standard": "^4.0.0",
+    "gatsby-cli": "^2.8.22",
     "gatsby-plugin-eslint": "^2.0.4",
     "prettier": "^1.15.2",
     "prismjs": "^1.15.0",
     "raf": "^3.4.1",
     "standard": "^12.0.1",
     "tween": "^0.9.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/christopherbiscardi/gatsby-starter-mdx-basic"
   }
 }
